# ROS_learning

./: .gitignore  LICENSE  README.md  cpp_test.cpp  runable
Ceres/AnalyticDiff/: AnalyticDiff.cpp  CMakeLists.txt
Ceres/Bundle_adjustment/: CMakeLists.txt  bundle_adjustment.cpp
Ceres/Curve_fitting/: CMakeLists.txt  curve_fitting.cpp
Ceres/Curve_fitting_loss_function/: CMakeLists.txt  curve_fitting_loss_function.cpp
Ceres/hallo_world/: CMakeLists.txt  use_ceres.cpp
Ceres/powell/: CMakeLists.txt  powell.cpp
GTSAM/: CMakeLists.txt  example.cpp
NOTE/: C++.ipynb  Debugg.ipynb  Linux.ipynb  Markdown_structure.ipynb  ROS.ipynb  Shell.ipynb  vscode.ipynb  视觉入门SLAM.ipynb
ROS1/src/: test.ipynb
ROS2/: frames.gv
ROS2/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
ROS2/src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
ROS2/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
ROS2/src/bag_recorder_nodes/: CMakeLists.txt  package.xml
ROS2/src/bag_recorder_nodes/src/: simple_bag_recorder.cpp
ROS2/src/cpp_parameters/: CMakeLists.txt  package.xml
ROS2/src/cpp_parameters/src/: cpp_parameters_node.cpp
ROS2/src/cpp_pubsub/: CMakeLists.txt  package.xml
ROS2/src/cpp_pubsub/src/: member_function_with_topic_statistics.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
ROS2/src/cpp_srvcli/: CMakeLists.txt  package.xml
ROS2/src/cpp_srvcli/src/: add_three_ints_client.cpp  add_three_ints_server.cpp
ROS2/src/greenteam_testing/: CMakeLists.txt  package.xml
ROS2/src/greenteam_testing/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ROS2/src/launch_tutorial/: package.xml  setup.cfg  setup.py
ROS2/src/launch_tutorial/config/: turtlesim.yaml
ROS2/src/launch_tutorial/launch/: example_event_handlers.launch.py  example_main.launch.py  example_substitutions.launch.py  launch_turtlesim.launch.py  tsst.launch.py  turtlesim_world_2.launch.py  turtlesim_world_3.launch.py
ROS2/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ROS2/src/learning_tf2_cpp/src/: static_turtle_tf2_broadcaster.cpp
ROS2/src/learning_tf2_py/: package.xml  setup.py
ROS2/src/learning_tf2_py/launch/: launch.launch.py  turtle_tf2_demo.launch.py
ROS2/src/learning_tf2_py/learning_tf2_py/: static_turtle_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
ROS2/src/more_interfaces/: CMakeLists.txt  package.xml
ROS2/src/more_interfaces/src/: publish_address_book.cpp
ROS2/src/my_package/: package.xml  setup.py
ROS2/src/my_package/my_package/: my_node.py
ROS2/src/py_pubsub/: package.xml  setup.py
ROS2/src/py_pubsub/launch/: py_node.launch.py
ROS2/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
ROS2/src/python_parameters/: package.xml  setup.py
ROS2/src/python_parameters/launch/: python_parameters_launch.py
ROS2/src/tutorial_interfaces/: CMakeLists.txt  package.xml
Simulation_ros2/: .gitmodules  readme.txt
Simulation_ros2/src/0_fsd_common/comm_pkg/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  bridge_mapping_rules.yaml  package.xml  parameters.launch
Simulation_ros2/src/0_fsd_common/comm_pkg/config/: README.txt  dd_conefusion.yaml  dd_conefusion_accel.yaml  dd_controls.yaml  dd_lidar_det.yaml  dd_track_info.yaml  dd_vehicle_D3.yaml
Simulation_ros2/src/0_fsd_common/comm_pkg/msg/: BoundingBox.msg  BoundingBoxes.msg  Cone.msg  ConeArray.msg  FSGLogger.msg  HealthMsg.msg  LogMsgControl.msg  Logging.msg  MasterLogic.msg  PoseVel.msg  RawMap.msg  SdcOut.msg  TrackInfo.msg  TrajectoryPoint.msg  VehiclePose.msg  VehicleState.msg  VehicleStateDT.msg  VehicleSystem.msg  WholeTrack.msg
Tkinter/: API_weather.py  Calculator.py  Class.py  Images.py  base.py  button.py  checkbutton.py  database.py  dropdown.py  entry.py  file.py  frame.py  grid.py  gui_example_1.py  gui_example_2.py  message.py  plot.py  radio.py  readme.txt  slider.py  status.py  viewer.py
bash_file/: array.sh  awk.sh  conditional.sh  curl_sownload.sh  debug.sh  file_add.txt  file_grep.txt  file_path.sh  file_sed.txt  first_script.sh  functions.sh  grep.sh  inotify.sh  input.sh  ip.sh  longComment.sh  loop.sh  math_operat.sh  output.sh  professional_name.sh  read_file.sh  second_script.sh  sed.sh  stdout.txt  store_in_file.sh  wait_to_determinate.sh
cpp_learning/: const.cpp  cpp_test.cpp  cpu_usage.csv  csv  csv_cpu.cpp  csv_mem.cpp  data.json  data_test.json  deque.cpp  eigen.cpp  interpolation.cpp  json_file.cpp  mencpy.cpp  pointer_ref.cpp  queue  queue.cpp  runable  runable_name  smart_pointer.cpp  statistic.cpp  template.cpp  transform  transform.cpp  vector_rotation  vector_rotation.cpp
cpp_learning/Thread/: Atomic.cpp  Creat_thread.cpp  Mutex.cpp  runable_name
cpp_learning/ceres/: hallo_world.cpp
cpp_learning/computer_vision/: 2D_laserScan_lowPass.cpp  DBSCAN  DBSCAN.cpp  ICP.cpp  absolute_orientation_problem.cpp  dbscan  derivative  derivative.cpp  derivative_5.cpp  k_means_clustering.cpp  kmean  lowpass  plot.py  random  random.cpp  relative_pose.cpp  relative_pose_center_point.cpp  relative_pose_final.cpp  relative_pose_final_loop.cpp  relative_pose_test.cpp  runable  transform_ros2.cpp
cpp_learning/inference/: CMakeLists.txt  inference.cpp  inference.hpp  model_64  test.cpp
docker_learning/.devcontainer/: devcontainer.json
matplotlib/: SLAM_plot.py
multiprocessing/: multipor.py  time_counter.py
pytest/: test_login.py
ros1_learning_ws/: .gitignore
ros1_learning_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
rpc_call_learning/example_2/: calculator_pb2.py  calculator_pb2.pyi
rpc_call_learning/example_2/protos/: calculator.proto
rpc_call_learning/greet_example/: greet_client.py  greet_pb2.py  greet_pb2_grpc.py  greet_server.py  readme.mk
socket/: client.py  client_simp.py  client_simp2.py  server.py  server_simp.py  server_simp2.py  tobias_tcp_template.py
subprocess/: Popen.py  output.txt  subprocess_learning.py  subprocess_learning2.py  subprocess_learning3.py  test.txt
vim/: command.txt
(+8 files in other folders)
